test(selfrun3): remove retired UI continuation assertions