@@ -1,73 +1,14 @@
 package com.shaterguy.chatgptselfrun;
 
 import org.junit.Test;
-
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
+/** 3.1 user input is durable input for the next disposable execution, never an in-chat continuation. */
 public final class UserImmediateInputPolicyTest {
-    @Test public void immediateAttemptIsLimitedToTheCurrentAssistantResponse() {
-        assertTrue(UserImmediateInputCoordinator.immediateEligible(
-                true, false, false, SelfRunStore.PHASE_WAIT_TURN_COMPLETION,
-                "https://chatgpt.com/c/12345678-1234-1234-1234-123456789abc", true));
-        assertFalse(UserImmediateInputCoordinator.immediateEligible(
-                true, false, false, SelfRunStore.PHASE_POST_PROTOCOL_DRIVE_SYNC,
-                "https://chatgpt.com/c/12345678-1234-1234-1234-123456789abc", true));
-        assertFalse(UserImmediateInputCoordinator.immediateEligible(
-                true, true, false, SelfRunStore.PHASE_WAIT_TURN_COMPLETION,
-                "https://chatgpt.com/c/12345678-1234-1234-1234-123456789abc", true));
-        assertFalse(UserImmediateInputCoordinator.immediateEligible(
-                true, false, false, SelfRunStore.PHASE_WAIT_TURN_COMPLETION, "", true));
-        assertFalse(UserImmediateInputCoordinator.immediateEligible(
-                true, false, false, SelfRunStore.PHASE_WAIT_TURN_COMPLETION,
-                "https://chatgpt.com/c/12345678-1234-1234-1234-123456789abc", false));
-    }
-
-    @Test public void onlyAnIdenticalReservationIsReleasedBeforeImmediateClick() {
-        assertTrue(UserImmediateInputCoordinator.matchingReservation("same", "same"));
-        assertFalse(UserImmediateInputCoordinator.matchingReservation("scheduled later", "send now"));
-        assertFalse(UserImmediateInputCoordinator.matchingReservation("", "send now"));
-    }
-
-    @Test public void wiringKeepsCompletionObserverSemanticsSeparateFromImmediateSendDetection() throws Exception {
-        String existingDom = src("SelfRunContinuationDom.java");
-        String immediateDom = src("UserImmediateInputDom.java");
-        String coordinator = src("UserImmediateInputCoordinator.java");
-        String host = src("HeadlessWebViewHost.java");
-
-        int existingStop = existingDom.indexOf("const stop=controls.find(isStop);");
-        int existingSend = existingDom.indexOf("const send=calibrated", existingStop);
-        int strictStopGate = existingDom.indexOf(
-                "if(stop&&!preferSendWhenStopCoexists)", existingSend);
-        int verifiedFormFallbackGate = existingDom.indexOf(
-                "if(stop&&!(composerEditable()&&formSubmitReady))", strictStopGate);
-        assertTrue(existingStop >= 0 && existingSend > existingStop
-                && strictStopGate > existingSend
-                && verifiedFormFallbackGate > strictStopGate);
-        assertTrue(existingDom.contains(
-                "const controlState=(preferSendWhenStopCoexists=false)=>"));
-        assertTrue(immediateDom.contains("const runningStop=()=>"));
-        assertTrue(immediateDom.contains("if(!runningStop())"));
-        assertTrue(immediateDom.contains("const forceSend=()=>"));
-        assertTrue(immediateDom.contains("IMMEDIATE_INPUT_SEND_READY"));
-        assertTrue(immediateDom.contains("IMMEDIATE_INPUT_CLICK_UNCERTAIN"));
-        assertTrue(immediateDom.contains("send.click()"));
-        assertFalse(immediateDom.contains("requestComposerSubmit"));
-        assertTrue(coordinator.contains("SelfRunStore.PHASE_WAIT_TURN_COMPLETION"));
-        assertTrue(coordinator.contains("UserNextInputStore.save(runId, text)"));
-        assertTrue(coordinator.contains("UserNextInputStore.delete(runId)"));
-        assertTrue(coordinator.contains("cleanupAfterAmbiguousClick"));
-        assertTrue(coordinator.contains("fallback suppressed to prevent duplicate"));
-        assertFalse(coordinator.contains("void click(int retry)"));
-        assertTrue(host.contains("static WebView activeWebView()"));
-        assertTrue(host.contains("if (activeWebView == webView) activeWebView = null"));
-    }
-
     @Test public void activeUiOnlySavesDurableNextExecutionInput() throws Exception {
         String activity = src("MainActivity.java");
         assertFalse(activity.contains("\"즉시 보내기\""));
@@ -78,9 +19,20 @@ public final class UserImmediateInputPolicyTest {
         assertTrue(activity.contains("다음 새 대화에 반영됩니다."));
     }
 
+    @Test public void engineConsumesRevisionedInputOnlyAtExecutionBoundary() throws Exception {
+        String coordinator = src("SelfRun3Coordinator.java");
+        String input = src("SelfRun3UserInput.java");
+        assertTrue(coordinator.contains("SelfRun3UserInput.snapshot"));
+        assertTrue(coordinator.contains("input.revision > consumed ? input.text : \"\""));
+        assertTrue(coordinator.contains("SelfRun3UserInput.consumeIfRevision"));
+        assertTrue(input.contains("Snapshot latest"));
+        assertTrue(input.contains("lateInput"));
+        assertFalse(coordinator.contains("UserImmediateInputCoordinator"));
+    }
+
     private static String src(String file) throws Exception {
-        Path path = Paths.get("app/src/main/java/com/shaterguy/chatgptselfrun/" + file);
-        if (!Files.exists(path)) path = Paths.get("src/main/java/com/shaterguy/chatgptselfrun/" + file);
+        Path path = Path.of("app/src/main/java/com/shaterguy/chatgptselfrun/" + file);
+        if (!Files.exists(path)) path = Path.of("src/main/java/com/shaterguy/chatgptselfrun/" + file);
         return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
     }
 }
